--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="Sun">Sun</string>
     <string name="Fri">Fri</string>
     <string name="Sat">Sat</string>
+    <string name="Pid">Pid</string>
+    <string name="patient_name">patient name</string>
 </resources>
